--- a/templates/jail.conf.erb
+++ b/templates/jail.conf.erb
@@ -18,10 +18,10 @@
 # "ignoreip" can be an IP address, a CIDR mask or a DNS host. Fail2ban will not
 # ban a host which matches an address in this list. Several addresses can be
 # defined using space separator.
-ignoreip = <%=@ignoreip.join(' ')%>
+ignoreip = <%=@ignoreip.values.map{|m| m['ip']}.join(' ')%>
 
 # "bantime" is the number of seconds that a host is banned.
-bantime  = 600
+bantime  = <%=@bantime%>
 
 # A host is banned if it has generated "maxretry" during the last "findtime"
 # seconds.
